--- a/06-3D/assets/css/style.css
+++ b/06-3D/assets/css/style.css
@@ -13,6 +13,7 @@
     width:200px;
     height:200px;
     background-color: aliceblue;
+    transform-style:preserve-3d;
 }
 .face{
     width:100%;
@@ -23,4 +24,29 @@
     opacity:0.5;
     font-family:Arial, Helvetica, sans-serif;
     font-size:2rem;
+}
+.front{
+    transform:translateZ(100px);
+}
+.back{
+    transform:translateZ(-100px) rotateZ(180deg);
+}
+.left{
+    transform:translateX(-100px) rotateY(90deg);
+}
+.right{
+    transform:translateX(100px) rotateY(90deg);
+}
+.top{
+    transform:translateY(-100px) rotateX(90deg);
+}
+.bottom{
+    transform:translateY(100px) rotateX(90deg);
+}
+@keyframes turn {
+    from{transform:rotate3d(0,0,0,0);}
+    to{transform:rotate3d(1,1,1, 360deg);}
+}
+.cube{
+    animation:turn 5s linear infinite;
 }
