--- a/07-MediaQuery/assets/css/style.css
+++ b/07-MediaQuery/assets/css/style.css
@@ -206,11 +206,39 @@ section>div:hover{
     transition:all 2s;
     transform: rotate(360deg); */
     /* transform: rotateX(360deg); */
-}
+
 /*p10.html*/
-/* .banner8{
+.banner8{
     background:-o-linear-gradient(black,white,green);
     background:-moz-linear-gradient(red,white,green);
     background:-webkit-linear-gradient(blue,white,green);
     background:linear-gradient(orange,white,green)
-}  */
+}  
+/*p11.html*/
+.banner9{
+    background-color:gray;
+    line-height: 3;
+}
+
+.common{
+    height: 400px;
+    width:300px;
+    margin:30px;
+    padding:30px;
+}
+
+.example-1{
+    background: radial-gradient(orange, white, skyblue);
+}
+
+.example-2{
+    background: radial-gradient(circle, orange, white, skyblue);
+}
+.example-3{
+    background: radial-gradient(circle farthest-side at left bottom, orange, white, skyblue);
+}
+
+.example-4{
+    background:repeating-radial-gradient(circle, orange, white 10%, green 20%); 
+}
+/*p12.html*/
