--- a/08-Flex/assets/css/media.css
+++ b/08-Flex/assets/css/media.css
@@ -1,16 +1,15 @@
-/*Mobile*/
-@media (max-width:767px){
-   .container{
+/* Mobile */ 
+ @media (max-width:767px){ 
+    .container{ 
     flex-flow:column;
-   }
-   .container>item{
-    width:100%;
-   }
+    } 
+  .container>item{ 
+    width:100%; 
+    } 
 
-}
-/*TABLET*/
-@media (min-width:768px) and (max-width:1024px) {
+} /*TABLET*/
+@media (min-width:768px) and (max-width:1024px) { 
   .container>.item{
-    width:43%;
-  }
+     width:43%; 
+   } 
 }
