--- a/09-Grid/assets/css/style.css
+++ b/09-Grid/assets/css/style.css
@@ -56,3 +56,53 @@
     grid-column-start: 1;
     grid-column-end: 2; /* Closing Before the 3nd Col */
 }
+/*p4.html*/
+.container>.item:nth-child(1){
+    grid-row-start:1;
+    grid-row-end:span 5;/*the full extent of something from end to end*/
+    grid-column-start:1;
+    grid-column-end:span 2;/*give one less for column with one -ve*/
+}
+/*p5.html*/
+.container>header,.container>article,.container>aside,.container>footer{
+    background-color:brown;
+    padding:20px;
+    color:#fff;
+    text-align:justify;
+    line-height:2;
+}
+.container>header{
+    text-shadow: 3px 3px 5px #000;
+    font-size:20px;
+    grid-area:header;
+}
+.container>footer{
+    text-align:center;
+    font-size:20px;
+    grid-area:footer;
+}
+.container>article{
+    grid-area:article;
+}
+.container>#left{
+    grid-area:left;
+} 
+.container>#right{
+    grid-area:right;
+}
+#project{
+    grid-template-rows: 100 1fr 100;
+    grid-template-columns: 20%  1fr 20%;/*out of 100% it takes*/
+    grid-template-areas: "header header header" "left article right" " footer footer footer";
+}
+/*p6.html*/
+.gallery>img{
+    max-width:100%;
+}
+.gallery>img:nth-child(odd){
+    grid-column:span 2;/*for common for all we use this we template to design individual*/
+    grid-row:span 2;
+}
+.gallery{
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+}
